--- a/src/app/detail/description/description.component.html
+++ b/src/app/detail/description/description.component.html
@@ -1,7 +1,7 @@
 
 
             
-            <div class="card p-2">
+            <div class="card p-2 border-0">
                 <h1>Titre de la série</h1>
                 <h2>catégorie1,catégorie2</h2>
                 <h3>Synopsis</h3>
