--- a/src/app/detail/indicateurs/indicateurs.component.html
+++ b/src/app/detail/indicateurs/indicateurs.component.html
@@ -1,12 +1,15 @@
-<div class="card ">
-    <h2 class="mt-3 mb-0">Etat du visionnage</h2>
-    <app-curseur class="w-100"></app-curseur>
-</div>
-<div class="card">
-    <h2 class="mt-3 mb-0">Vous avez aimé</h2>
-    <app-curseur class="w-100"></app-curseur>
-</div>
-<div class="card">      
-    <h2 class="mt-3 mb-0" >Voulez vous voir ce programme ?</h2>
-    <app-curseur class="w-100"></app-curseur>
+<div class="row">
+
+    <div class="col-4 border-0 text-center">
+        <h2 class="mt-3 mb-0">Etat du visionnage</h2>
+        <app-curseur class="w-100"></app-curseur>
+    </div>
+    <div class="col-4 border-0 text-center">
+        <h2 class="mt-3 mb-0">Vous avez aimé</h2>
+        <app-curseur class="w-100"></app-curseur>
+    </div>
+    <div class="col-4 border-0 text-center">      
+        <h2 class="mt-3 mb-0" >Voulez vous voir ce programme ?</h2>
+        <app-curseur class="w-100"></app-curseur>
+    </div>
 </div>
