--- a/src/app/detail/detailboard/detailboard.component.html
+++ b/src/app/detail/detailboard/detailboard.component.html
@@ -3,7 +3,7 @@
     <!-- DESCRIPTION / PHOTO + INFOS -->
     <div class="row" height="50%">
         <div class="col-4 ">
-            <div class="card px-4">
+            <div class="card px-4 border-0">
                 <img class="img-fluid "  src="https://image.tmdb.org/t/p/w500/kprWnZu3nvHsaIjVo6qMm0lketp.jpg" alt="">
             </div>
         </div>
@@ -13,14 +13,14 @@
     </div>
 
     <!-- INDICATEURS + ETAT SERIE + VIDEO -->
-    <div class="row ">
-        <div class="col-4">
+    <div >
+        <div >
             <app-indicateurs></app-indicateurs>
         </div>
-        <div class="col-4">
+        <div >
             <app-etatserie></app-etatserie>
         </div>
-        <div class="col-4">
+        <div >
             
         </div>
     </div>
