--- a/src/app/list/list-series/list-series.component.html
+++ b/src/app/list/list-series/list-series.component.html
@@ -16,7 +16,21 @@
       <!-- Weight Column -->
       <ng-container matColumnDef="note" >
         <th mat-header-cell *matHeaderCellDef class="text-center"> Note </th>
-        <td (click)="goToDetail()" mat-cell *matCellDef="let element" width="12%" class="text-center"> {{element.note}} </td>
+        <td  mat-cell *matCellDef="let element" width="12%" class="text-center">
+           <button mat-raised-button color="primary"
+              [mdePopoverTriggerFor]="appPopover"
+              mdePopoverTriggerOn="click" #popoverTrigger="mdePopoverTrigger">
+              Episodes Vus
+            </button>
+
+            <mde-popover #appPopover="mdePopover" [mdePopoverOverlapTrigger]="false">
+              <mat-card style="max-width: 300px">
+                <mat-card-content>
+                    <app-etatserie></app-etatserie>
+                </mat-card-content>
+              </mat-card>
+            </mde-popover>
+           </td>
       </ng-container>
   
       <!-- Symbol Column -->
@@ -39,3 +53,5 @@
   
     <mat-paginator [pageSizeOptions]="[6, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
+
+
