--- a/src/app/signup/account/account.component.html
+++ b/src/app/signup/account/account.component.html
@@ -1,1 +1,35 @@
-<p>account works!</p>
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit(contactForm)" action="">
+  <div>
+    <label  class="form-label">Username</label>
+    <input formControlName="username" type="text" class="form-control">
+<!--    <p *ngIf="contactForm.get('first').hasError('minlength') && contactForm.get('first').touched" class="form-error">-->
+<!--      Min 2 caractères</p>-->
+  </div>
+  <div>
+    <label  class="form-label">Password</label>
+    <input formControlName="password" type="text" class="form-control">
+    <!--    <p *ngIf="contactForm.get('first').hasError('minlength') && contactForm.get('first').touched" class="form-error">-->
+    <!--      Min 2 caractères</p>-->
+  </div>
+  <div>
+    <label  class="form-label">Prenom</label>
+    <input formControlName="firstname" type="text" class="form-control">
+<!--    <p *ngIf="contactForm.get('first').hasError('minlength') && contactForm.get('first').touched" class="form-error">-->
+<!--      Min 2 caractères</p>-->
+  </div>
+  <div>
+    <label  class="form-label">Nom</label>
+    <input formControlName="lastname" type="text" class="form-control">
+<!--    <p *ngIf="contactForm.get('phone').hasError('required')" class="form-error">-->
+<!--      requis</p>-->
+  </div>
+  <div>
+    <label  class="form-label">Email</label>
+    <input formControlName="emailAddress" type="text" class="form-control">
+<!--    <p *ngIf="contactForm.get('email').hasError('email') && contactForm.get('email').touched" class="form-error">-->
+<!--      Renseigné un email valide</p>-->
+  </div>
+
+  <button type="submit">Ajouter</button>
+</form>
+
